examples/spork/failing/both_modified_implicitness/ExpectedCurrently.java
class Cls {
    public static void main(String[] args) {
<<<<<<< LEFT
        String s = args[0];
||||||| BASE
=======
        java.lang.String s = args[0];
>>>>>>> RIGHT
        System.out.println(s);
    }
}